refactor linked accounts
Store linked account info in feedbag rather than generate it on
the fly. Ensure that users can't add linked account records via
feedbag update; they can only be added via mgmt api for security.

I think this implementation removes some possibilities for bugs in
the Query() and QueryIfModified() methods, which dynamically added
linked account records at query time. In addition, we can remove
the LinkedAccontManager type and just use existing Feedbag facilities.
